--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
-    compile 'com.github.crossoverone:StatusBarUtil:1.3.3'//会不定时更新，请及时更新
+    implementation 'com.github.crossoverone:StatusBarUtil:1.3.3'//会不定时更新，请及时更新
 }
