--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'com.github.crossoverone:StatusBarUtil:1.3.3'//会不定时更新，请及时更新
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
 }
