--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,6 @@ dependencies {
 
     implementation 'com.github.crossoverone:StatusBarUtil:1.3.3'//会不定时更新，请及时更新
     implementation 'org.greenrobot:eventbus:3.1.1'
-    compile 'com.pgyersdk:sdk:2.8.1'
+//    compile 'com.pgyersdk:sdk:2.8.1'
 
 }
