--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
-        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
+//        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
 
     }
 }
