--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.gz.xhb_zhongtie"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         manifestPlaceholders = [
@@ -34,6 +34,17 @@ android {
     }
     dataBinding {
         enabled = true
+    }
+
+    //打包命名规则
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            if (variant.buildType.name.equals('release')) {
+                outputFileName = "zhongtie_release_v${variant.versionName}.apk"
+            } else if (variant.buildType.name.equals('debug')) {
+                outputFileName = "zhongtie_debug_v${variant.versionName}.apk"
+            }
+        }
     }
 }
 
